sys/dev/syscons/scmouse.c
@@ -798,7 +798,7 @@ sc_mouse_ioctl(struct tty *tp, u_long cmd, caddr_t data, struct thread *td)
 	    cur_scp->status &= ~MOUSE_HIDDEN;
 
 	    if (cur_scp->mouse_level > 0) {
-	    	sc_mouse_input(scp, mouse);
+		sc_mouse_input(cur_scp, mouse);
 		break;
 	    }
 
@@ -859,7 +859,7 @@ sc_mouse_ioctl(struct tty *tp, u_long cmd, caddr_t data, struct thread *td)
 	    cur_scp->status &= ~MOUSE_HIDDEN;
 
 	    if (cur_scp->mouse_level > 0) {
-	    	sc_mouse_input(scp, mouse);
+		sc_mouse_input(cur_scp, mouse);
 		break;
 	    }
 
